--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - npm install -g testacular@canary grunt
+  - npm install -g grunt
 
 script: "grunt"
