--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - npm install -g testacular@canary grunt
-  - npm install -g grunt
+  - npm install -g testacular@canary
+  - npm install -g grunt-cli
 
 script: "grunt"
