--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - 0.10
   - 0.11
+  - 0.12
 
 before_script:
   - export DISPLAY=:99.0
@@ -9,4 +10,4 @@ before_script:
   - npm install -g testacular@canary
   - npm install -g grunt-cli
 
-script: "grunt"
+script: "npm test"
