--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "angular-piwik",
-  "version": "1.2.0",
+  "version": "1.3.0",
+  "scripts": {
+    "test": "grunt"
+  },
   "devDependencies": {
     "grunt": "~0.4.0",
     "testacular": "~0.4.0",
